# semantic-code-mcp

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  TODO.md  pyproject.toml
.claude/: settings.local.json
.claude/commands/: ship.md
.claude/rules/: agent-docs.md  development-process.md  documentation.md  mcp-server.md  publishing.md  python.md  testing.md
.github/workflows/: publish.yml
benchmarks/: compare_search.py
docs/decisions/: 001-initial-architecture.md  002-agent-instruction-files.md  003-module-docstring-chunking.md  004-multi-language-chunker-architecture.md  005-markdown-chunking.md  _template.md
src/semantic_code_mcp/: __init__.py  __main__.py  app.py  cli.py  config.py  container.py  embedder.py  indexer.py  logging.py  models.py  profiling.py  protocols.py  server.py
src/semantic_code_mcp/chunkers/: __init__.py  base.py  composite.py  markdown.py  python.py  rust.py
src/semantic_code_mcp/indexer/: __init__.py  chunker.py  embedder.py  indexer.py
src/semantic_code_mcp/models/: __init__.py  domain.py  responses.py
src/semantic_code_mcp/search/: __init__.py  ranking.py  searcher.py
src/semantic_code_mcp/services/: __init__.py  index_service.py  search_service.py
src/semantic_code_mcp/storage/: __init__.py  cache.py  lancedb.py
tests/: __init__.py  conftest.py  test_cache.py  test_chunker.py  test_composite_chunker.py  test_config.py  test_embedder.py  test_hybrid_search.py  test_index_service.py  test_indexer.py  test_markdown_chunker.py  test_models.py  test_ranking.py  test_rust_chunker.py  test_searcher.py  test_storage.py
