[project]
name = "semantic-code-mcp"
version = "0.1.0"
description = "Local MCP server for semantic code search"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "lancedb>=0.27.0",
    "mcp>=1.26.0",
    "pandas>=3.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "sentence-transformers>=5.2.0",
    "structlog>=25.5.0",
    "tree-sitter>=0.25.2",
    "tree-sitter-python>=0.25.0",
]

[project.scripts]
semantic-code-mcp = "semantic_code_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/semantic_code_mcp"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.14",
    "ty>=0.0.13",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src"]
fix = true
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*.pyc",
    "build",
    "dist",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "N",    # pep8-naming
    "SIM",  # flake8-simplify
    "W",    # pycodestyle warnings
    "RUF",  # Ruff-specific rules
]
ignore = [
    "E712",    # Avoid == True comparisons (sometimes needed for SQL expressions)
    "SIM108",  # Use ternary operator - if/else often more readable
    "SIM103",  # Return condition directly - explicit if/return often more readable
]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["semantic_code_mcp"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/**.py" = ["D", "ANN"]

[tool.ty.environment]
python-version = "3.14"

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]  # assert used in tests
